--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body{
     background-color: red;
 }
+
+div{
+    color: white;
+    font-size: 5rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+p{
+    text-align: center;
+}
